<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.minitwitter.viewModel.LoginViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:background="@color/blueMinitwitter">

            <ImageView
                android:id="@+id/logo_minitwitter"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_marginTop="42dp"
                app:srcCompat="@drawable/ic_logo_minitwitter_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/singin_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_minitwitter" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/Username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Title"
                app:startIconDrawable="@drawable/ic_baseline_account_circle_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:textColorHint="@color/blueMinitwitter_dark"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pws_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/pws"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/username_layout"
                app:layout_constraintTop_toBottomOf="@+id/username_layout"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pws"
                    android:textColorHint="@color/blueMinitwitter_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pws_layout"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/white"
                android:text="@string/Login"
                android:textColor="@color/blueMinitwitter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_error"
                app:layout_constraintTop_toBottomOf="@+id/text_error" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialButton"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
